--- a/src/FsConnect/FsConnect.csproj
+++ b/src/FsConnect/FsConnect.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <None Remove="Microsoft.FlightSimulator.SimConnect.dll" />
     <None Remove="SimConnect.dll" />
+    <None Remove="SimConnect.lib" />
   </ItemGroup>
 
   <ItemGroup>
@@ -22,6 +23,9 @@
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Content>
     <Content Include="SimConnect.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="SimConnect.lib">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
