--- a/src/RadioPanel/RadioPanel.csproj
+++ b/src/RadioPanel/RadioPanel.csproj
@@ -1,73 +1,62 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>WinExe</OutputType>
-    <TargetFramework>net6.0-windows</TargetFramework>
-    <UseWPF>true</UseWPF>
-    <ApplicationIcon>Images\radioTower.ico</ApplicationIcon>
-  </PropertyGroup>
+    <PropertyGroup>
+        <OutputType>WinExe</OutputType>
+        <TargetFramework>net6.0-windows</TargetFramework>
+        <UseWPF>true</UseWPF>
+        <ApplicationIcon>Images\radioTower.ico</ApplicationIcon>
+        <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+    </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <PlatformTarget>x64</PlatformTarget>
-  </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+        <PlatformTarget>x64</PlatformTarget>
+    </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <PlatformTarget>x64</PlatformTarget>
-  </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+        <PlatformTarget>x64</PlatformTarget>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <None Remove="Fonts\Orbitron-Black.ttf" />
-    <None Remove="Fonts\Orbitron-Bold.ttf" />
-    <None Remove="Fonts\Orbitron-ExtraBold.ttf" />
-    <None Remove="Fonts\Orbitron-Medium.ttf" />
-    <None Remove="Fonts\Orbitron-Regular.ttf" />
-    <None Remove="Fonts\Orbitron-SemiBold.ttf" />
-    <None Remove="Images\power.png" />
-    <None Remove="Images\power_on.png" />
-    <None Remove="Images\switch.png" />
-    <None Remove="switch.png" />
-  </ItemGroup>
+    <ItemGroup>
+        <None Remove="Fonts\Orbitron-Black.ttf" />
+        <None Remove="Fonts\Orbitron-Bold.ttf" />
+        <None Remove="Fonts\Orbitron-ExtraBold.ttf" />
+        <None Remove="Fonts\Orbitron-Medium.ttf" />
+        <None Remove="Fonts\Orbitron-Regular.ttf" />
+        <None Remove="Fonts\Orbitron-SemiBold.ttf" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="WPFMaskedTextBox" Version="5.0.1" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="CommunityToolkit.Mvvm" Version="8.2.0" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0-preview.3.23174.8" />
+        <PackageReference Include="WPFMaskedTextBox" Version="5.0.1" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <Compile Update="Settings.Designer.cs">
-      <DesignTimeSharedInput>True</DesignTimeSharedInput>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>Settings.settings</DependentUpon>
-    </Compile>
-  </ItemGroup>
+    <ItemGroup>
+        <Compile Update="Settings.Designer.cs">
+            <DesignTimeSharedInput>True</DesignTimeSharedInput>
+            <AutoGen>True</AutoGen>
+            <DependentUpon>Settings.settings</DependentUpon>
+        </Compile>
+    </ItemGroup>
 
-  <ItemGroup>
-    <None Update="Settings.settings">
-      <Generator>SettingsSingleFileGenerator</Generator>
-      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
-    </None>
-  </ItemGroup>
+    <ItemGroup>
+        <None Update="Settings.settings">
+            <Generator>SettingsSingleFileGenerator</Generator>
+            <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+        </None>
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\FsConnect\FsConnect.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\FsConnect\FsConnect.csproj" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <Resource Include="Fonts\Orbitron-Black.ttf" />
-    <Resource Include="Fonts\Orbitron-Bold.ttf" />
-    <Resource Include="Fonts\Orbitron-ExtraBold.ttf" />
-    <Resource Include="Fonts\Orbitron-Medium.ttf" />
-    <Resource Include="Fonts\Orbitron-Regular.ttf" />
-    <Resource Include="Fonts\Orbitron-SemiBold.ttf" />
-    <Resource Include="switch.png" />
-    <Resource Include="Images\power.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Images\power_on.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
-    <Resource Include="Images\switch.png">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
-  </ItemGroup>
+    <ItemGroup>
+        <Resource Include="Fonts\Orbitron-Black.ttf" />
+        <Resource Include="Fonts\Orbitron-Bold.ttf" />
+        <Resource Include="Fonts\Orbitron-ExtraBold.ttf" />
+        <Resource Include="Fonts\Orbitron-Medium.ttf" />
+        <Resource Include="Fonts\Orbitron-Regular.ttf" />
+        <Resource Include="Fonts\Orbitron-SemiBold.ttf" />
+    </ItemGroup>
 
 </Project>
